HEAD
	+ Trigger apache restart after package remove
2.0.5
	+ Removed duplicated entry in usedFiles
	+ Removed creation of empty /etc/cron.hourly/freshclam script
2.0.4
	+ Show 0 signatures when the antivirus is not even launched
2.0.3
	+ Bugfix: passing template args to freshclam.conf correctly
2.0.2
	+ Add support for authenticated proxy
2.0.1
	+ Launch freshclam as a cron script from the required path by
	  clamav-freshclam init script
	+ Bugfix: Include a tailored AppArmor profile to allow the
	  observer scripts execution
	+ Added signatures to the database information page
	+ Added commercial message
	+ Bugfix: Show right messages when the module is not configured nor
	  enabled
1.5.2
	+ Add support for updates using the system wide defined proxy
1.5.1
	+ Avoid errors in ebox.log if /etc/cron.hourly/freshclam not exists
1.5
	+ New config templates from the lucid version of ClamAV
1.3.14
	+ Changed outdated message, to avoid befuddle users
1.3.13
	+ Changed location of freshclam state file, maybe it could solve
	  some notification errors in some installations
1.3.12
	+ Add page title
1.3.10
	+ Use disableApparmorProfile from EBox::Module::Service
	  in setConf to avoid issues if apparmor is installed
	  after antivirus.
1.3.6
	+ bugfix: notify squid module when antivirus is enabled, so it
	  could change its configuration if needed
1.1.20
	+ run it as root for now to make it work samba-vscan
	+ do not use upstart for clamd
	+ use pidfiles() and pidfile
	+ freshclam status file is store in a ebox directory with
	  clamav persmisions
1.1.10
	+ New release
1.1
	+ Initial release